--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,11 +8,21 @@ WORKDIR /app
 COPY . /app
 
 # Install any needed packages specified in requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
+RUN apt-get update && \
+    apt-get install -y pulseaudio && \
+    pip install --no-cache-dir -r requirements.txt
+
+# Setup virtual audio drivers
+RUN rm -rf /var/run/pulse /var/lib/pulse /root/.config/pulse && \
+    pulseaudio -D --verbose --exit-idle-time=-1 --system --disallow-exit && \
+    pactl load-module module-null-sink sink_name=DummyOutput sink_properties=device.description="Virtual_Dummy_Output" && \
+    pactl load-module module-null-sink sink_name=MicOutput sink_properties=device.description="Virtual_Microphone_Output" && \
+    pactl set-default-source MicOutput.monitor && \
+    pactl set-default-sink MicOutput && \
+    pactl load-module module-virtual-source source_name=VirtualMic
 
 # Expose the port that the app runs on
 EXPOSE 7099
 
 # Run the application
 CMD ["uvicorn", "notetakers.app:app", "--host", "0.0.0.0", "--port", "7099"]
-
