--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -13,13 +13,14 @@ RUN apt-get update && \
     pip install --no-cache-dir -r requirements.txt
 
 # Setup virtual audio drivers
-RUN rm -rf /var/run/pulse /var/lib/pulse /root/.config/pulse && \
-    pulseaudio -D --verbose --exit-idle-time=-1 --system --disallow-exit && \
-    pactl load-module module-null-sink sink_name=DummyOutput sink_properties=device.description="Virtual_Dummy_Output" && \
-    pactl load-module module-null-sink sink_name=MicOutput sink_properties=device.description="Virtual_Microphone_Output" && \
-    pactl set-default-source MicOutput.monitor && \
-    pactl set-default-sink MicOutput && \
-    pactl load-module module-virtual-source source_name=VirtualMic
+RUN useradd -m pulseaudio_user && \
+    chown -R pulseaudio_user:pulseaudio_user /var/run/pulse /var/lib/pulse /root/.config/pulse && \
+    su pulseaudio_user -c "pulseaudio -D --verbose --exit-idle-time=-1 --system --disallow-exit" && \
+    su pulseaudio_user -c "pactl load-module module-null-sink sink_name=DummyOutput sink_properties=device.description='Virtual_Dummy_Output'" && \
+    su pulseaudio_user -c "pactl load-module module-null-sink sink_name=MicOutput sink_properties=device.description='Virtual_Microphone_Output'" && \
+    su pulseaudio_user -c "pactl set-default-source MicOutput.monitor" && \
+    su pulseaudio_user -c "pactl set-default-sink MicOutput" && \
+    su pulseaudio_user -c "pactl load-module module-virtual-source source_name=VirtualMic"
 
 # Expose the port that the app runs on
 EXPOSE 7099
