--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -9,7 +9,7 @@ COPY . /app
 
 # Install any needed packages specified in requirements.txt
 RUN apt-get update && \
-    apt-get install -y pulseaudio pulseaudio-utils dbus dbus-x11 wget gnupg xvfb && \
+    apt-get install -y pulseaudio pulseaudio-utils wget gnupg xvfb && \
     apt-get install -y libnss3 libx11-xcb1 libxcomposite1 libxcursor1 libxdamage1 libxi6 libxtst6 libxrandr2 libasound2 libatk1.0-0 libatk-bridge2.0-0 libgtk-3-0 && \
     wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add - && \
     sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list' && \
@@ -30,5 +30,5 @@ RUN apt-get update && \
 # Set environment variable for XDG_RUNTIME_DIR
 ENV XDG_RUNTIME_DIR=/tmp/runtime-pulseaudio_user
 
-# Start dbus and pulseaudio in the background
-CMD ["bash", "-c", "service dbus start && su - pulseaudio_user -c 'pulseaudio --start' && export DBUS_SESSION_BUS_ADDRESS=unix:path=/run/dbus/system_bus_socket && xvfb-run -a --server-args='-screen 0 1024x768x24' google-chrome --no-sandbox --remote-debugging-port=9222 & uvicorn notetakers.app:app --host 0.0.0.0 --port 7099"]
+# Start pulseaudio in the background
+CMD ["bash", "-c", "su - pulseaudio_user -c 'pulseaudio --start' && xvfb-run -a --server-args='-screen 0 1024x768x24' google-chrome --no-sandbox --remote-debugging-port=9222 & uvicorn notetakers.app:app --host 0.0.0.0 --port 7099"]
