--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,28 +7,18 @@ WORKDIR /app
 # Copy the current directory contents into the container at /app
 COPY . /app
 
-# Install any needed packages specified in requirements.txt
+# Install necessary packages, Chrome, and pulseaudio
 RUN apt-get update && \
-    apt-get install -y pulseaudio pulseaudio-utils wget gnupg xvfb && \
-    apt-get install -y libnss3 libx11-xcb1 libxcomposite1 libxcursor1 libxdamage1 libxi6 libxtst6 libxrandr2 libasound2 libatk1.0-0 libatk-bridge2.0-0 libgtk-3-0 && \
+    apt-get install -y wget gnupg pulseaudio pulseaudio-utils && \
     wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add - && \
     sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list' && \
     apt-get update && \
     apt-get install -y google-chrome-stable && \
     pip install --no-cache-dir -r requirements.txt && \
-    useradd -m pulseaudio_user && \
-    mkdir -p /var/run/pulse /var/lib/pulse /root/.config/pulse && \
-    chown -R pulseaudio_user:pulseaudio_user /var/run/pulse /var/lib/pulse /root/.config/pulse
+    rm -rf /var/lib/apt/lists/*
 
 # Expose the port that the app runs on
 EXPOSE 7099
 
-RUN apt-get update && \
-    apt-get install -y xvfb libgl1-mesa-dri && \
-    rm -rf /var/lib/apt/lists/*
-
-# Set environment variable for XDG_RUNTIME_DIR
-ENV XDG_RUNTIME_DIR=/tmp/runtime-pulseaudio_user
-
-# Start pulseaudio in the background
-CMD ["bash", "-c", "su - pulseaudio_user -c 'pulseaudio --start' && xvfb-run -a --server-args='-screen 0 1024x768x24' google-chrome --no-sandbox --remote-debugging-port=9222 & uvicorn notetakers.app:app --host 0.0.0.0 --port 7099"]
+# Start pulseaudio and the application
+CMD ["bash", "-c", "pulseaudio --start && uvicorn notetakers.app:app --host 0.0.0.0 --port 7099"]
