--- a/server/compose.yaml
+++ b/server/compose.yaml
@@ -13,6 +13,8 @@ services:
     entrypoint: ["bash", "-c", "pulseaudio --start && uvicorn notetakers.app:app --host 0.0.0.0 --port 7099 --reload"]
     environment:
       - DEBIAN_FRONTEND=noninteractive
+    networks:
+      - app_network
 
   zoomsdk:
     build:
@@ -26,3 +28,9 @@ services:
     entrypoint: ["/tini", "--", "./bin/entry.sh"]
     environment:
       - DEBIAN_FRONTEND=noninteractive
+    networks:
+      - app_network
+
+networks:
+  app_network:
+    driver: bridge
