--- a/server/compose.yaml
+++ b/server/compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build:
@@ -10,7 +8,7 @@ services:
       - "7099:7099"
     volumes:
       - .:/app
-    entrypoint: ["bash", "-c", "pulseaudio --start && uvicorn notetakers.app:app --host 0.0.0.0 --port 7099 --reload"]
+    entrypoint: ["/tini", "-s", "--", "bash", "-c", "pulseaudio --start && uvicorn notetakers.app:app --host 0.0.0.0 --port 7099 --reload"]
     environment:
       - DEBIAN_FRONTEND=noninteractive
     networks:
