--- a/server/compose.yaml
+++ b/server/compose.yaml
@@ -6,9 +6,7 @@ services:
     platform: linux/amd64
     ports:
       - "7099:7099"
-    volumes:
-      - .:/app
-    entrypoint: ["bash", "-c", "ls -l /app/zoom-sdk && cd /app/build && exec ./zoomsdk && uvicorn notetakers.app:app --host 0.0.0.0 --port 7099 --reload"]
+    entrypoint: ["bash", "-c", "ls -l /app && cd /app && uvicorn notetakers.app:app --host 0.0.0.0 --port 7099 --reload --reload-dir /app"]
     environment:
       - DEBIAN_FRONTEND=noninteractive
     networks:
