--- a/server/compose.yaml
+++ b/server/compose.yaml
@@ -9,6 +9,8 @@ services:
     entrypoint: ["bash", "-c", "ls -l /app && cd /app && uvicorn notetakers.app:app --host 0.0.0.0 --port 7099 --reload --reload-dir /app"]
     environment:
       - DEBIAN_FRONTEND=noninteractive
+    volumes:
+      - ./notetakers:/app/notetakers
     networks:
       - app_network
 
