--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -8,10 +8,11 @@ pytz
 undetected-chromedriver
 selenium
 supabase
-openai==1.35.8
+openai==1.40.0
 Pillow
 selenium-stealth
 playwright
 playwright-stealth
 pyvirtualdisplay
 websockets
+httpx==0.27.2
